--- a/10 Miscellaneous/Oops/sample.html
+++ b/10 Miscellaneous/Oops/sample.html
@@ -8,6 +8,7 @@
 <body>
     <h1>hello, welcome to OOPs learning</h1>
 
-    <script src="./c01ObjectPrototype.js"></script>
+    <!-- <script src="./c01ObjectPrototype.js"></script> -->
+    <script src="./c02FactotyFunction.js"></script>
 </body>
 </html>
